text overlap bug fix

--- a/src/static/styles/projects.css
+++ b/src/static/styles/projects.css
@@ -27,6 +27,7 @@
     -moz-box-orient: vertical;
     -webkit-line-clamp: 3;
     overflow: hidden;
+    line-height: 1.5;
 }
 
 .underlined {
